src/app.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Math&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

* {
    --kelly-green: #7fbc41ff;
    --magenta-dye: #c51b7dff;
    --hunyadi-yellow: #edae49ff;
    --moonstone: #429ea6ff;
    --black-olive: #36382eff;
    --gray: #eeefebff;
}


html,
body {
    width: 100%;
    height: 100%;
    font-family: 'Roboto', sans-serif;
    color: var(--black-olive);
    overflow-x: hidden;
    margin: 0;
}

/* Override foreignObject focus styling in chrome */
foreignObject:focus {
    outline: none;
}

text {
    font-family: 'Roboto', sans-serif;
    stroke: var(--black-olive);
    font-weight: 200;
}

#app {
    width: 100%;
    height: 100%;
}

.sticky {
    position: sticky;
    top: 0;
    flex: 1 1 65%;
    width: 65%;
    height: 100vh;
}

.section-container {
    margin-top: 1em;
    transition: background 100ms;
    display: flex;
}

.step {
    height: 75vh;
    display: flex;
    place-items: center;
    justify-content: center;
}

.step-content {
    font-size: 1.2rem;
    background: var(--gray);
    color: #ccc;
    border-radius: 5px;
    padding: 0.5rem 1rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    transition: background 500ms ease;
    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2);
    text-align: left;
    width: 75%;
    margin: auto;
    max-width: 500px;
}

.step.active .step-content {
    background: white;
    color: var(--black-olive);
}

.steps-container {
    height: 100%;
}

.steps-container {
    flex: 1 1 35%;
    z-index: 10;
    pointer-events: none;
}

/* Comment out the following line to always make it 'text-on-top' */
@media screen and (max-width: 900px) {
    .section-container {
        flex-direction: column-reverse;
    }

    .sticky {
        width: 95%;
        margin: auto;
    }

    .step {
        height: 100vh;
    }
}


.hero {
    height: 100vh;
    display: flex;
    place-items: center;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    font-size: 1.2rem;
    background: 0px/ 100px url('./assets/cornell.svg');
}

.backmatter {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    font-size: 1rem;
    background: 0px/ 50px url('./assets/cornell.svg');
}

.methodology {
    display: flex;
    flex: 1;
    place-items: center;
    flex-direction: column;
    justify-content: center;

}

.footer {
    padding: 30px 10px;
    background-color: white;
    width: 100vw;
    text-align: center;
    margin-top: auto;
    box-shadow: 0 -2px 20px var(--black-olive);
}

.prose {
    max-width: 70ch;
    font-size: 1.2rem;
    padding: 0.5rem 1rem;
}

h1,
h2,
h3 {
    text-transform: uppercase;
    font-weight: 400;
}

a,
a:link,
a:visited,
a:active {
    color: inherit;
    border-bottom: .15em solid var(--moonstone);
    text-decoration: none;
    transition: all .30s ease
}

a.img-link {
    border-bottom: none
}

a:not(.img-link):hover,
a:not(.img-link):focus {
    background: var(--moonstone);
    color: white;
}


span.example {
    background-color: color-mix(in srgb, var(--hunyadi-yellow), transparent 30%);
    padding: 3px 5px;
    font-weight: bold;
    border-radius: 3px;
}

span.positive {
    background-color: color-mix(in srgb, var(--kelly-green), transparent 30%);
    padding: 3px 5px;
    font-weight: bold;
    border-radius: 3px;
}

span.negative {
    background-color: color-mix(in srgb, var(--magenta-dye), transparent 30%);
    padding: 3px 5px;
    font-weight: bold;
    border-radius: 3px;
}

p.note {
    font-size: medium;
}

.loading {
    top: 50%;
    text-align: center;
    color: gray;
    font-size: 2rem;
}

math {
    font-family: 'Noto Sans Math', sans-serif;
}

.math-block {
    margin-top: 1rem;
    margin-bottom: 1rem;
    background-color: var(--gray);
}

